canadensis_dsdl_frontend/tests/compile_fail/name_starts_with_digit/canadensis/3NameStartsWithDigit.1.0.uavcan

# The name of this type starts with a digit, which is not allowed

@sealed
